--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <script src='//libtl.com/sdk.js' data-zone='10201003' data-sdk='show_10201003'></script>
 <head>
 <meta charset="UTF-8">
 <title>CityQuest - Daily Mystery Missions</title>
