--- a/index.html
+++ b/index.html
@@ -165,5 +165,17 @@ function clearMission() {
     alert("Mission cleared. You can generate a new one!");
 }
 </script>
+    
+// Rewarded Popup
+
+show_10201003('pop').then(() => {
+    // user watch ad till the end or close it in interstitial format
+    // your code to reward user for rewarded format
+}).catch(e => {
+    // user get error during playing ad
+    // do nothing or whatever you want
+})
+
+        
 </body>
 </html>
